Fixed several minor bugs (mostly small performance bugs) or potential bugs found by UMD's findbugs program.